--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=eqVvhiQAAAAJ"
-  email            : "eehuitang@mail.scut.edu.cn"
+  email            : "ee.ht.tang@outlook.com"
   researchgate     : "https://www.researchgate.net/profile/Hui-Tang-38"
   uri              :
   bitbucket        :
@@ -51,11 +51,11 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/tang15178681"
+  twitter          : "tang15178681"
   vine             :
   weibo            :
   xing             :
-  youtube          : "https://www.youtube.com/@huitang8540"
+  youtube          : "@huitang8540"
   wikipedia        :
 
 
