--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Hui Tang (唐慧)"
-description              : "Ph.D. Student, South China University of Techlonogy"
+description              : "Ph.D. Student, South China University of Technology"
 repository               : "huitangtang/huitangtang.github.io"
 google_scholar_stats_use_cdn : true
 
@@ -23,7 +23,7 @@ baidu_site_verification  : code-ZxFK3f4pfb
 author:
   name             : "Hui Tang (唐慧)"
   avatar           : "image/HuiTang.jpg"
-  bio              : "South China University of Techlonogy"
+  bio              : "South China University of Technology"
   location         : "Guangzhou"
   employer         :
   pubmed           : 
@@ -55,7 +55,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : "huitang8540"
+  youtube          : "@huitang8540"
   wikipedia        :
 
 
