--- a/.github/workflows/update_github_myprofile.yaml
+++ b/.github/workflows/update_github_myprofile.yaml
@@ -15,7 +15,7 @@ jobs:
         python3 update.py
         git init
         git config --local user.name "${GITHUB_ACTOR}"
-        git config --local user.email "eehuitang@mail.scut.edu.cn"
+        git config --local user.email "ee.ht.tang@outlook.com"
         export remote_repo="https://${GITHUB_ACTOR}:${{ secrets.GHRS_GITHUB_API_TOKEN }}@github.com/huitangtang/huitangtang.git"
         git add README.md
         git add images
